フルスクリーン時の通知ブロックが長すぎる問題を修正

--- a/C-SlideShow/AppSettingDialog.xaml
+++ b/C-SlideShow/AppSettingDialog.xaml
@@ -75,7 +75,7 @@
                         </Button.ContextMenu>
                     </Button>
                     <StackPanel Margin="0,4,50,0" Orientation="Horizontal" VerticalAlignment="Top" HorizontalAlignment="Right">
-                        <Label x:Name="CommandValueLabel" Visibility="Collapsed">コマンドの値</Label>
+                        <Label x:Name="CommandValueLabel" Visibility="Collapsed">コマンドのパラメータ</Label>
                         <TextBox x:Name="CommandValue" Visibility="Collapsed" TextChanged="CommandValue_TextChanged" Width="140" Height="20"></TextBox>
                     </StackPanel>
 
