--- a/C-SlideShow/Core/ImgContainer.xaml
+++ b/C-SlideShow/Core/ImgContainer.xaml
@@ -1,14 +1,16 @@
-﻿<UserControl x:Class="C_SlideShow.TileContainer"
+﻿<UserControl x:Class="C_SlideShow.Core.ImgContainer"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:C_SlideShow"
+             xmlns:local="clr-namespace:C_SlideShow.Core"
              mc:Ignorable="d" 
-             Background="Transparent"
-             Width="400"
-             Height="300"
+             Width="100"
+             Height="100"
+             HorizontalAlignment="Left"
+             VerticalAlignment="Top"
              d:DesignHeight="300" d:DesignWidth="300">
-    <Grid x:Name="MainGrid">
+    <Grid Name="MainGrid">
+            
     </Grid>
 </UserControl>
