--- a/C-SlideShow/SettingDialog.xaml
+++ b/C-SlideShow/SettingDialog.xaml
@@ -62,6 +62,24 @@
                             </ComboBox.ToolTip>
                         </ComboBox>
                     </StackPanel>
+                    <StackPanel Orientation="Horizontal" Margin="0,4">
+                        <Label>見開き検出</Label>
+                        <ComboBox x:Name="DetectionOfSpread"
+                                  SelectionChanged="DetectionOfSpread_SelectionChanged"
+                                  SelectedValuePath="Content"
+                                  ToolTipService.ShowDuration="50000"
+                                  Margin="2,0" Width="165" >
+                            <ComboBoxItem>しない</ComboBoxItem>
+                            <ComboBoxItem>横長の画像を見開き表示</ComboBoxItem>
+                            <ComboBoxItem>縦長の画像を見開き表示</ComboBoxItem>
+                            <ComboBox.ToolTip>
+                                <TextBlock>
+                                    主に書籍画像閲覧用の設定です。<LineBreak/>
+                                    「見開き表示」は、グリッドの列数・行数の設定にかかわらずウインドウ全体に画像を表示することを指します。
+                                </TextBlock>
+                            </ComboBox.ToolTip>
+                        </ComboBox>
+                    </StackPanel>
 
                     <Button x:Name="AppSettingButton" Click="AppSettingButton_Click" Width="94" HorizontalAlignment="Left" Margin="0,10">アプリの設定...</Button>
                 </StackPanel>
